Added ability to update profile information

--- a/src/components/pages/Landing/landing.scss
+++ b/src/components/pages/Landing/landing.scss
@@ -1,6 +1,6 @@
 .banner-ctn {
   height: 400px;
-  background: url(../../../images/landing_banner.png);
+  background: url(../../../images/landing_banner1.png);
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
@@ -12,7 +12,7 @@
 
     h1 {
       font-size: 36pt;
-      color: #00c756;
+      color: white;
       text-shadow: 1px 1px 3px #007a35;
       margin: 0;
       padding: 0;
