Styling changes to the landing page and navigation bar

--- a/src/components/pages/GroomerProfileView/groomerProfile.scss
+++ b/src/components/pages/GroomerProfileView/groomerProfile.scss
@@ -1,9 +1,9 @@
 .profile-ctn {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto !important;
 
   .profile {
-    margin: 20px 70px;
+    margin: 20px 0;
 
     .profile-row1 {
       .profile-col {
