--- a/src/components/pages/GroomerProfileView/scheduler.scss
+++ b/src/components/pages/GroomerProfileView/scheduler.scss
@@ -6,10 +6,29 @@
     text-align: center;
   }
   .schedule-row1 {
+    margin: 20px 0 0;
     .schedule-col {
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    .appt-builder {
+      display: flex;
+      flex-direction: column;
+      background-color: whitesmoke;
+      height: 400px;
+    }
+  }
+
+  .schedule-row2 {
+    margin: 20px 0;
+    .sch-btn {
+      margin: 0 0 10px;
+      width: 200px;
+      height: 40px;
+      border-radius: 10px;
+      background-color: #00c756;
+      color: whitesmoke;
     }
   }
 }
